# Rusk-bot

./: .gitignore  Cargo.toml
command_macro/: Cargo.toml
command_macro/src/: lib.rs
component_macro/: Cargo.toml
component_macro/src/: lib.rs
event_macro/: Cargo.toml
event_macro/src/: lib.rs
locale/RU_ru/commands/: commands.yml
locale/RU_ru/logger/: notify.yml
locale/RU_ru/model/: main.yml
locale/RU_ru/shop/: shop.yml  shop_command.yml  shop_embed.yml
modal_macro/: Cargo.toml
modal_macro/src/: lib.rs
src/: lib.rs  main.rs  prelude.rs
src/bot/: bot.rs
src/command_manager/: command_manager.rs  mod.rs
src/commands/: config_commands.rs  debug_commands.rs  fun_commands.rs  member_commands.rs  mod.rs  project_commands.rs  role_commands.rs  save_commands.rs  shop_commands.rs  tag_commands.rs  task_commands.rs
src/config/: config.rs
src/connect/: connect.rs
src/converter/: member.rs  mod.rs  project.rs  tag.rs  task.rs
src/events/: events.rs
src/handler/: handler.rs
src/localization/: localization.rs  mod.rs
src/logger/: logger.rs
src/model/: member.rs  member_changer.rs  mod.rs  project.rs  tag.rs  task.rs
src/model/member/: changer_listen.rs  member.rs  member_changer.rs  mod.rs
src/model/project/: changer_listen.rs  mod.rs  project.rs  project_changer.rs
src/model/role/: mod.rs
src/model/tag/: changer_listen.rs  mod.rs  tag.rs  tag_changer.rs
src/model/task/: changer_listen.rs  mod.rs  task.rs  task_changer.rs
src/shop/: action.rs  listen.rs  mod.rs  shop.rs
src/utils/: utils.rs
tests/: test.rs
(+49 files in other folders)
