[package]
name = "task_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
chrono = "0.4"
command_macro = { path = "./command_macro" }
dashmap = "5.3"
dotenv = "0.15"
event_macro = { path = "./event_macro" }
once_cell = "1.17"
reqwest = "0.11"
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serenity = "0.12"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
walkdir = "2.3"

